[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/Car.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Car.gd" type="Script" id=2]
[ext_resource path="res://Scenes/SmokeParticle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Car3.png" type="Texture" id=4]
[ext_resource path="res://Images/Car2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 50.2984
height = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.4031
height = 102.728

[node name="Car" type="RigidBody2D" groups=[
"car",
]]
input_pickable = true
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="GasPuff" parent="." instance=ExtResource( 3 )]
position = Vector2( 67.6283, 24.4135 )
emitting = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -11, 0 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.78976, 3.03109 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -11.0665, 13.0308 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="SmokeTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="SmokeTimer" to="." method="_on_SmokeTimer_timeout"]
